--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <div class="home">
         <div class="metade">
-            <h4>I'm</h4>
             <h1>Eduarda</h1>
             <h4>Monteblanco</h4>
         </div>
@@ -29,7 +28,7 @@
               <p class="description">Sistema de chamados desenvolvido para empresa que atuo no momento.</p>
               <div class="foot">
                 <a href="https://github.com/Eduarda-Monteblanco/chamados-polartica" ><i class="fa-brands fa-github"></i></a>
-                <a href="" style="color: #fff; outline: none">Veja o projeto</a>
+                <a href="https://chamados-polartica.herokuapp.com/" style="color: #fff; outline: none">Veja o projeto</a>
               </div>
 
             </div>
