--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             </div>
             
             <div class="card card-three">
-              <h2 class="card-title">Em desenvolvimento</h2>
-              <p class="date">Em desenvolvimento</p>
-              <p class="description">Em desenvolvimento</p>
+              <h2 class="card-title">To do App</h2>
+              <p class="date">CSS, HTML e JavaScript</p>
+              <p class="description">Um simples To Do App</p>
               <div class="foot">
-                <a href="https://github.com/Eduarda-Monteblanco/chamados-polartica" ><i class="fa-brands fa-github"></i></a>
-                <a href="" style="color: #fff; outline: none">Veja o projeto</a>
+                <a href="https://github.com/Eduarda-Monteblanco/to-do-app" ><i class="fa-brands fa-github"></i></a>
+                <a href="https://eduarda-monteblanco.github.io/to-do-app/" style="color: #fff; outline: none">Veja o projeto</a>
               </div>
             </div>
             
