--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             </div>
             
             <div class="card card-four">
-              <h2 class="card-title">Em desenvolvimento</h2>
-              <p class="date">Em desenvolvimento</p>
-              <p class="description">Em desenvolvimento</p>
+              <h2 class="card-title">Password Generator</h2>
+              <p class="date">CSS, HTML e JavaScript</p>
+              <p class="description">Um simples gerador de senhas feito em CSS, JS E HTML</p>
               <div class="foot">
-                <a href="https://github.com/Eduarda-Monteblanco/chamados-polartica" ><i class="fa-brands fa-github"></i></a>
-                <a href="" style="color: #fff; outline: none">Veja o projeto</a>
+                <a href="https://github.com/Eduarda-Monteblanco/Password-Generator" ><i class="fa-brands fa-github"></i></a>
+                <a href="https://eduarda-monteblanco.github.io/Password-Generator/" style="color: #fff; outline: none">Veja o projeto</a>
               </div>
             </div>
           </div>
