--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Eduarda Monteblanco</title>
-    <link rel="stylesheet" href="./src/main.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="./src/button.css">
   <link rel="stylesheet" href="./src/card.css">
+  <link rel="stylesheet" href="./src/main.css">
 </head>
 
     <div class="home">
@@ -18,7 +19,7 @@
         <div class="body">
             <img src="./assets/carbon.png" alt="">
             <button class="curriculo">
-              <a href="./assets/curriculo.pdf" target="_blank">
+              <a href="//assets/curriculo.pdf" target="_blank">
               <div class="svg-wrapper-1">
                 <div class="svg-wrapper">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
