--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="body">
             <img src="./assets/carbon.png" alt="">
             <button class="curriculo">
-              <a href="//assets/curriculo.pdf" target="_blank">
+              <a href="\\assets\\curriculo.pdf" target="_blank">
               <div class="svg-wrapper-1">
                 <div class="svg-wrapper">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
